// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statistics reducer should handle STATISTICS_DATA_FAILURE 1`] = `
Object {
  "charts": Object {
    "operatingsystem": Object {
      "error": "some error happened",
    },
  },
}
`;

exports[`statistics reducer should handle STATISTICS_DATA_REQUEST 1`] = `
Object {
  "charts": Object {
    "operatingsystem": Object {
      "id": "operatingsystem",
      "search": "/hosts?search=os_title=~VAL~",
      "title": "OS Distribution",
      "url": "statistics/operatingsystem",
    },
  },
}
`;

exports[`statistics reducer should handle STATISTICS_DATA_SUCCESS 1`] = `
Object {
  "charts": Object {
    "operatingsystem": Object {
      "data": Array [
        Array [
          "RedHat 3",
          2,
        ],
      ],
    },
  },
}
`;

exports[`statistics reducer should return the initial state 1`] = `
Object {
  "charts": Object {},
}
`;
